<resources>
    <string name="app_name">Analisa Properti</string>
    <string name="tag_line">Mudahnya menganalisa properti</string>
    <string name="action_settings">Settings</string>
    <string name="detail_cicilan">Detail Cicilan</string>
    <string name="detail_nilai_pasar">Detail Nilai Pasar</string>
    <string name="detail_cash_flow">Detail Cash Flow</string>
    <string name="nav_home">Beranda</string>
    <string name="nav_cicilan">Kalkulator Cicilan</string>
    <string name="nav_nilai_pasar">Kalkulator Nilai Pasar</string>
    <string name="nav_cash_flow">Kalkulator Cash Flow</string>
    <string name="nav_akun">Akun</string>
    <string name="nav_bantuan">Bantuan</string>
    <string name="nav_pengaturan">Pengaturan Bahasa</string>
    <string name="nav_give_five_star">Suka ? Beri Kami 5 Bintang !</string>
    <string name="nav_edit_profil">Ubah Profil</string>
    <string name="nav_keluar">Keluar</string>
    <string name="nav_main">Pendahuluan</string>
    <string name="id_user">ID User</string>
    <string name="login">Masuk</string>
    <string name="lupa_password">Lupa Password ?</string>
    <string name="belum_punya_akun">Belum punya akun ? Daftar di sini</string>
    <string name="reg_nama">Nama Lengkap</string>
    <string name="reg_email">Email</string>
    <string name="reg_no_hp">Nomor HP</string>
    <string name="reg_password">Password</string>
    <string name="password_lama">Password Lama</string>
    <string name="password_baru">Password Baru</string>
    <string name="password_baru_2">Ulangi Password Baru</string>
    <string name="simpan">Simpan</string>
    <string name="register">Daftar</string>
    <string name="kirim">Kirim</string>
    <string name="sudah_punya_akun">Sudah punya akun ? Masuk di sini</string>
    <string name="login_berhasil">Berhasil Masuk</string>
    <string name="register_berhasil">Berhasil Daftar</string>
    <string name="tambah">Tambah</string>
    <string name="batal">Batal</string>
    <string name="hitung">Hitung</string>
    <string name="selesai">Selesai</string>
    <string name="next">Lanjut</string>
    <string name="back">Kembali</string>
    <string name="review">Review</string>
    <string name="reset">Reset</string>
    <string name="revisi">Revisi</string>
    <string name="hapus">Hapus</string>
    <string name="ubah">Ubah</string>
    <string name="pilih_salah_satu_bulan">Pilih salah satu (bulan) :</string>
    <string name="pilih_salah_satu_persen">Pilih salah satu (%) :</string>
    <string name="tekan_tombol">Tekan tombol tambah di bawah ini untuk mulai menghitung</string>
    <string name="data_password_belum_lengkap">Data password belum lengkap !</string>
    <string name="password_baru_tidak_match">Password baru tidak match !</string>
    <string name="password_lama_salah">Password lama salah !</string>
    <string name="berhasil_disimpan">Data berhasil disimpan</string>
    <string name="gagal_disimpan">Data gagal disimpan !</string>
    <string name="berhasil_diubah">Data berhasil diubah</string>
    <string name="gagal_diubah">Data gagal diubah !</string>
    <string name="berhasil_dihapus">Data berhasil dihapus</string>
    <string name="gagal_dihapus">Data gagal dihapus !</string>
    <string name="data_kosong">Data belum diisi !</string>
    <string name="gagal_login_not_match">Login Gagal (Email dan Password tidak cocok) !</string>
    <string name="gagal_register">Gagal daftar !</string>
    <string name="gagal_koneksi">Gagal koneksi !</string>
    <string name="koneksi_internet_bermasalah">Koneksi internet bermasalah !</string>
    <string name="yakin_ingin_keluar">Apakah anda yakin ingin keluar ?</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="nama_file">Nama File</string>
    <string name="masukan_nama_file">Masukkan nama file :</string>
    <string name="inggris">Inggris</string>
    <string name="indonesia">Indonesia</string>
    <string name="data_properti_incaran_belum_lengkap">Data properti incaran belum lengkap !</string>
    <string name="properti_satu_wajib_diisi">Properti #1 wajin diisi !</string>
    <string name="catatan_belum_diisi">Catatan belum diisi !</string>
    <string name="data_belum_dihitung">Data belum dihitung !</string>
    <string name="final_result">Hasil Akhir</string>
    <string name="judul_tambah_cicilan">Cicilan Baru</string>
    <string name="sub_judul_tambah_cicilan">Masukkan keterangan cicilan :</string>
    <string name="pinjaman_kpr">Pinjaman KPR</string>
    <string name="bunga_per_tahun">Bunga Per Tahun (%)</string>
    <string name="tenor_lama_pinjaman">Tenor Lama Pinjaman (Bulan)</string>
    <string name="tenor_bunga_fix">Tenor Bunga Fix (Bulan)</string>
    <string name="bunga_floating">Bunga Floating Per Tahun (%)</string>
    <string name="sisa_pokok_pinjaman">Sisa Pokok Pinjaman</string>
    <string name="cicilan">Cicilan</string>
    <string name="cicilan_floating">Cicilan Floating</string>
    <string name="data_belum_lengkap">Data belum Lengkap !</string>
    <string name="judul_nilai_pasar">Nilai Pasar Baru</string>
    <string name="sub_judul_nilai_pasar">Masukkan keterangan nilai pasar :</string>
    <string name="judul_review_nilai_pasar">Review Nilai Pasar</string>
    <string name="judul_hasil_nilai_pasar">Hasil Nilai Pasar</string>
    <string name="incaran">Incaran</string>
    <string name="properti">Properti</string>
    <string name="properti_incaran">Properti Incaran</string>
    <string name="properti_satu">Properti #1</string>
    <string name="properti_dua">Properti #2</string>
    <string name="properti_tiga">Properti #3</string>
    <string name="properti_empat">Properti #4</string>
    <string name="properti_lima">Properti #5</string>
    <string name="harga_jual_properti">Harga Jual Properti</string>
    <string name="luas_tanah">Luas Tanah (m2)</string>
    <string name="luas_bangunan">Luas Bangunan (m2)</string>
    <string name="usia_bangunan">Usia Bangunan</string>
    <string name="usia_bangunan_tahun">Usia Bangunan (Tahun)</string>
    <string name="harga_rata_bangunan">Harga Rata-rata Bangunan per Meter</string>
    <string name="harga_rata">Harga Rata Bangunan</string>
    <string name="catatan_kondisi">Catatan Kondisi Bangunan</string>
    <string name="catatan_survey">Catatan Survey Lokasi</string>
    <string name="harga_pasaran_per_meter">Harga Pasaran per Meter</string>
    <string name="perbandingan_properti_incaran">Perbandingan Properti Incaran</string>
    <string name="judul_cash_flow">Cash Flow Baru</string>
    <string name="sub_judul_cash_flow">Masukkan keterangan cash flow :</string>
    <string name="judul_hasil_cash_flow">Hasil Cash Flow</string>
    <string name="kamar">Kamar</string>
    <string name="pemasukan">Pemasukan</string>
    <string name="pengeluaran">Pengeluaran</string>
    <string name="upgrade_fasilitas">Upgrade Fasilitas</string>
    <string name="tipe_kamar">Tipe Kamar</string>
    <string name="jumlah_kamar">Jumlah Kamar</string>
    <string name="harga_kamar">Harga Kamar</string>
    <string name="occupancy_rate">Occupancy Rate (%)</string>
    <string name="occupancy_rate_belum_diisi">Occupancy Rate belum diisi !</string>
    <string name="tambah_kamar">Tambah Kamar</string>
    <string name="total_penghasilan">Total Penghasilan</string>
    <string name="keterangan_pemasukan">Keterangan Pemasukan</string>
    <string name="jumlah_pemasukan">Jumlah Pemasukan</string>
    <string name="tambah_pemasukan">Tambah Pemasukan</string>
    <string name="penghasilan_sewa_kamar">Penghasilan Sewa Kamar</string>
    <string name="total_pemasukan">Total Pemasukan</string>
    <string name="keterangan_pengeluaran">Keterangan Pengeluaran</string>
    <string name="jumlah_pengeluaran">Jumlah Pengeluaran</string>
    <string name="tambah_pengeluaran">Tambah Pengeluaran</string>
    <string name="total_pengeluaran">Total Pengeluaran</string>
    <string name="nama_fasilitas">Nama Fasilitas</string>
    <string name="kenaikan_harga">Kenaikan Harga</string>
    <string name="tambah_fasilitas">Tambah Fasilitas</string>
    <string name="net_operating_income">Net Operating Income</string>
    <string name="total_upgrade">Total Upgrade</string>
    <string name="net_operating_income_future">Net Operating Income Future</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="ad_id_banner_tes">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_id_banner_top">ca-app-pub-3950402057146083/6676024221</string>
    <string name="ad_id_banner_down">ca-app-pub-3950402057146083/1031555153</string>
    <string name="ad_id_interstitial">ca-app-pub-3950402057146083/1437559897</string>
    <string name="facebook_app_id">1741753252610047</string>
    <string name="facebook_login_protocol_scheme">fb1741753252610047</string>
    <string name="question_1">Bagaimana cara menghitung jumlah cicilan saya ?</string>
    <string name="question_2">Bagaimana cara menghitung nilai pasar baru ?</string>
    <string name="question_3">Bagaimana menghitung perkiraan cash flow property ?</string>
    <string name="question_4">Bagaimana jika saya mendapat kesulitan dalam aplikasi ?</string>
    <string name="deskripsi_1">Apabila Anda sudah berencana untuk melakukan hutang KPR atas properti yang ingin dibeli, maka Anda bisa menghitung jumlah cicilan di aplikasi ini.</string>
    <string name="deskripsi_2">Jika Anda sudah menghitung jumlah cicilan, maka berikutnya adalah menghitung nilai pasar. Nilai ini akan mengkalkulasikan kisaran harga pasar properti yang ingin dibeli.</string>
    <string name="deskripsi_3">Properti yang dibeli terutama apartemen, rumah, atau vila, bisa dihitung cash flow-nya dengan aplikasi.</string>
    <string name="answer_1">a. Klik ‘Kalkulator Cicilan’.\nb. Akan muncul kotak dialog ‘Cicilan Baru’ lalu isi dengan keterangan cicilan, misalnya ‘Apartemen’, klik ‘Tambah’.\nc. Lalu isi total pinjaman KPR, bunga per tahun dalam %, lama pinjaman (bulan), bunga fix (bulan), dan bunga floating per tahun (%), klik ‘Hitung’.\nd. Otomatis akan muncul hasil ‘Sisa Pokok Pinjaman’, ‘Cicilan’ dan ‘Cicilan Floating’.\ne. Klik tanda disket di pojok kanan atas untuk menyimpan data.</string>
    <string name="answer_2">a. Klik ‘Kalkulator Nilai Pasar’.\nb. Isi semua keterangan yang dibutuhkan dari ‘Harga Jual Properti’  sampai ‘Catatan Survey Lokasi’, setelah selesai klik ‘Lanjut’.\nc. Halaman akan beralih pada bagian berikutnya yaitu ‘Properti #1’, di aplikasi ini bisa ditambahkan sampai Properti #5. Isi semua keterangan dari ‘Harga Jual Properti’ sampai ‘Harga Rata-rata Bangunan Per Meter’.\nd. Bisa klik ‘kembali’. ‘Review’ atau ‘lanjut’ jika masih ingin menghitung properti lainnya.\ne. Jika selesai klik ‘Review’.\nf. Akan muncul halaman yang menunjukkan data tabel nilai pasar baru, klik ‘Lanjut’.\ng. Anda akan mendapatkan ‘Hasil Akhir’.\nh. Klik tanda disket di pojok kanan atas untuk menyimpan data.</string>
    <string name="answer_3">a. Klik ‘Kalkulator Cash Flow’.\nb. Akan muncul halaman ‘Kamar’, ‘Pemasukan’, ‘Pengeluaran’ dan ‘Upgrade Fasilitas’.\nc. Isi semua keterangan yang dibutuhkan seperti tipe kamar dan jumlah pengeluaran.\nd. Berikutnya isi semua bagian halaman dan informasi yang dibutuhkan.\ne. Klik ‘hitung’ agar mendapat hasilnya.</string>
    <string name="answer_4">Silakan mengirimkan email ke tim support kami: Cs@luckynineapps.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="asset_statements" translatable="false">[{ \"include\": \"https://propertyanalysis.luckynineapps.com/.well-known/assetlinks.json\" }]</string>
</resources>