<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_id_banner_tes" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TableLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:stretchColumns="0">

                            <TableRow
                                android:background="@drawable/table_row_bg"
                                android:baselineAligned="false"
                                android:paddingLeft="4dp"
                                android:paddingRight="4dp"
                                android:paddingTop="8dp"
                                android:paddingBottom="8dp">

                                <TextView
                                    android:background="@drawable/table_cell_bg"
                                    android:padding="8dp"
                                    android:text=" "
                                    android:textColor="@color/colorAccent"
                                    android:textStyle="bold" />

                                <TextView
                                    android:gravity="center"
                                    android:background="@drawable/table_cell_bg"
                                    android:padding="8dp"
                                    android:text="@string/properti_incaran"
                                    android:textColor="@color/colorAccent"
                                    android:textStyle="bold" />

                                <TextView
                                    android:gravity="center"
                                    android:background="@drawable/table_cell_bg"
                                    android:padding="8dp"
                                    android:text="@string/properti_satu"
                                    android:textColor="@color/colorAccent"
                                    android:textStyle="bold" />

                                <TextView
                                    android:gravity="center"
                                    android:background="@drawable/table_cell_bg"
                                    android:padding="8dp"
                                    android:text="@string/properti_dua"
                                    android:textColor="@color/colorAccent"
                                    android:textStyle="bold" />

                                <TextView
                                    android:gravity="center"
                                    android:background="@drawable/table_cell_bg"
                                    android:padding="8dp"
                                    android:text="@string/properti_tiga"
                                    android:textColor="@color/colorAccent"
                                    android:textStyle="bold" />

                                <TextView
                                    android:gravity="center"
                                    android:background="@drawable/table_cell_bg"
                                    android:padding="8dp"
                                    android:text="@string/properti_empat"
                                    android:textColor="@color/colorAccent"
                                    android:textStyle="bold" />

                                <TextView
                                    android:gravity="center"
                                    android:background="@drawable/table_cell_bg"
                                    android:padding="8dp"
                                    android:text="@string/properti_lima"
                                    android:textColor="@color/colorAccent"
                                    android:textStyle="bold" />
                            </TableRow>

                            <TableRow
                                android:id="@+id/row_harga_jual_properti"
                                android:background="@drawable/table_row_bg"
                                android:padding="5dp">

                                <TextView
                                    android:padding="8dp"
                                    android:text="@string/harga_jual_properti"
                                    android:textColor="@color/colorAccent"
                                    android:background="@drawable/table_cell_bg"
                                    android:textStyle="bold" />
                            </TableRow>

                            <TableRow
                                android:id="@+id/row_luas_tanah"
                                android:background="@drawable/table_row_bg"
                                android:padding="5dp">

                                <TextView
                                    android:padding="8dp"
                                    android:text="@string/luas_tanah"
                                    android:textColor="@color/colorAccent"
                                    android:background="@drawable/table_cell_bg"
                                    android:textStyle="bold" />
                            </TableRow>

                            <TableRow
                                android:id="@+id/row_luas_bangunan"
                                android:background="@drawable/table_row_bg"
                                android:padding="5dp">

                                <TextView
                                    android:padding="8dp"
                                    android:text="@string/luas_bangunan"
                                    android:textColor="@color/colorAccent"
                                    android:background="@drawable/table_cell_bg"
                                    android:textStyle="bold" />
                            </TableRow>

                            <TableRow
                                android:id="@+id/row_usia_bangunan"
                                android:background="@drawable/table_row_bg"
                                android:padding="5dp">

                                <TextView
                                    android:padding="8dp"
                                    android:text="@string/usia_bangunan"
                                    android:textColor="@color/colorAccent"
                                    android:background="@drawable/table_cell_bg"
                                    android:textStyle="bold" />
                            </TableRow>

                            <TableRow
                                android:id="@+id/row_harga_rata_rata"
                                android:background="@drawable/table_row_last_bg"
                                android:padding="5dp">

                                <TextView
                                    android:padding="8dp"
                                    android:text="@string/harga_rata"
                                    android:textColor="@color/colorAccent"
                                    android:background="@drawable/table_cell_bg"
                                    android:textStyle="bold" />
                            </TableRow>


                        </TableLayout>

                    </LinearLayout>

                </HorizontalScrollView>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_back"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="@string/back"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_finish"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="@string/selesai"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_id_banner_tes" />

</LinearLayout>