<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    android:background="@color/colorSoftPrimary">

                    <TextView
                        android:id="@+id/txt_question"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/question_1"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"
                        android:textSize="18sp"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/layout_catatan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_deskripsi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/deskripsi_1"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/txt_answer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/answer_1"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_back"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorWhite"
                    android:text="@string/back"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/btn_next"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorWhite"
                    android:text="@string/next"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>